<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ECECEC">
    <LinearLayout
        android:id="@+id/ln_layout_main"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_avatar"
                android:padding="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_user"

                />
            <TextView
                android:textColor="@color/main_color"
                android:layout_gravity="center"
                android:text="@string/about_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:padding="5dp"
            android:background="@drawable/decor_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:padding="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/main_color_5"
                android:text="@string/about_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"/>
                <EditText
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:id="@+id/et_nick_name"
                    android:layout_weight="2"
                    android:background="@drawable/border_edit"
                    android:layout_width="100dp"
                    android:layout_height="30dp"/>
            </LinearLayout>

            <LinearLayout

                android:padding="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/about_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:background="@drawable/border_edit"
                    android:layout_weight="0.8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/tv_male"
                        android:layout_weight="0.8"
                        android:background="@drawable/border_select"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/about_text_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:background="@drawable/border_edit"
                        android:id="@+id/tv_female"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/about_text_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:padding="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/about_text_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/tv_birth_day"
                    android:background="@drawable/border_edit"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_weight="0.8"
                    android:text="@string/about_text_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:background="@drawable/border_select"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln_layout_main"
        android:textStyle="bold"
        android:textSize="21dp"
        android:text="@string/about_text_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/img_decor_1"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:layout_marginStart="50dp"
        android:src="@drawable/img_decor_4"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>