<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:background="@color/main_color"
        android:orientation="horizontal"
        android:id="@+id/ln_layout_back"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_back"
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            />
    </LinearLayout>
    <TextView
        android:textSize="22dp"
        android:textColor="@color/white"
        android:id="@+id/tv_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text_5"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ln_layout_back"
        />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tv_title"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_detail_text_1"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ln_layout_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tv_description"
        android:textColor="@color/black"
        android:padding="15dp"
        android:textSize="18dp"
        android:text="@string/story_detail_text_2"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>