<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:background="@color/main_color"
        android:orientation="horizontal"
        android:id="@+id/ln_layout_back"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_back"
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            />
    </LinearLayout>
    <TextView
        android:textSize="22dp"
        android:textColor="@color/white"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text_3"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ln_layout_back"
        />

    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ln_layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:background="@drawable/decor_3"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/story_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rcv_story_vietnam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/black"
            android:background="@drawable/decor_4"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/story_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rcv_story_foreign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>