<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:background="@color/main_color"
        android:orientation="horizontal"
        android:id="@+id/ln_layout_back"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_back"
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/ln_layout_back"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:id="@+id/ln_layout_game_count"
            android:background="@drawable/decor_1"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="5dp"
                android:src="@drawable/img_decor_5"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/game_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:id="@+id/ln_layout_game_alpha"
            android:background="@drawable/decor_2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/img_decor_6"
                android:layout_width="150dp"
                android:layout_height="120dp"/>
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/game_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>



    </LinearLayout>

    <TextView
        android:textSize="22dp"
        android:textColor="@color/white"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text_4"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ln_layout_back"
        />

    <ImageView
        android:src="@drawable/img_decor_1"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:layout_marginStart="50dp"
        android:src="@drawable/img_decor_4"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>